// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/gitlab addAssignees(issueNo, assignees) should add the given assignees to the issue 1`] = `
Array [
  Array [
    "projects/undefined/merge_requests/42?assignee_id=123",
  ],
]
`;

exports[`platform/gitlab addAssignees(issueNo, assignees) should add the given assignees to the issue if supported 1`] = `
Array [
  Array [
    "projects/undefined/merge_requests/42?assignee_id=123",
  ],
  Array [
    "projects/undefined/merge_requests/42?assignee_ids[]=123&assignee_ids[]=124",
  ],
]
`;

exports[`platform/gitlab addAssignees(issueNo, assignees) should warn if more than one assignee 1`] = `
Array [
  Array [
    "projects/undefined/merge_requests/42?assignee_id=123",
  ],
]
`;

exports[`platform/gitlab commitFilesToBranch() sends to gitFs 1`] = `
Array [
  Array [
    "projects/some%2Frepo",
  ],
  Array [
    "user",
  ],
]
`;

exports[`platform/gitlab createPr(branchName, title, body) auto-accepts the MR when requested 1`] = `
Array [
  Array [
    "projects/undefined/merge_requests/12345/merge",
    Object {
      "body": Object {
        "merge_when_pipeline_succeeds": true,
        "should_remove_source_branch": true,
      },
    },
  ],
]
`;

exports[`platform/gitlab createPr(branchName, title, body) returns the PR 1`] = `
Object {
  "branchName": "some-branch",
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "isModified": false,
  "number": 12345,
}
`;

exports[`platform/gitlab createPr(branchName, title, body) returns the PR 2`] = `
Array [
  Array [
    "projects/undefined/merge_requests",
    Object {
      "body": Object {
        "description": "the-body",
        "labels": null,
        "remove_source_branch": true,
        "source_branch": "some-branch",
        "target_branch": undefined,
        "title": "some-title",
      },
    },
  ],
]
`;

exports[`platform/gitlab createPr(branchName, title, body) uses default branch 1`] = `
Object {
  "branchName": "some-branch",
  "displayNumber": "Merge Request #12345",
  "id": 1,
  "iid": 12345,
  "isModified": false,
  "number": 12345,
}
`;

exports[`platform/gitlab createPr(branchName, title, body) uses default branch 2`] = `
Array [
  Array [
    "projects/undefined/merge_requests",
    Object {
      "body": Object {
        "description": "the-body",
        "labels": "",
        "remove_source_branch": true,
        "source_branch": "some-branch",
        "target_branch": undefined,
        "title": "some-title",
      },
    },
  ],
]
`;

exports[`platform/gitlab deleteLabel(issueNo, label) should delete the label 1`] = `
Array [
  Array [
    "projects/undefined/merge_requests/42",
    Object {
      "body": Object {
        "labels": "foo,renovate",
      },
    },
  ],
]
`;

exports[`platform/gitlab ensureComment add comment if not found 1`] = `
Array [
  Array [
    "projects/some%2Frepo/merge_requests/42/notes",
    Object {
      "body": Object {
        "body": "### some-subject

some
content",
      },
    },
  ],
]
`;

exports[`platform/gitlab ensureComment add updates comment if necessary 1`] = `
Array [
  Array [
    "projects/some%2Frepo/merge_requests/42/notes/1234",
    Object {
      "body": Object {
        "body": "### some-subject

some
content",
      },
    },
  ],
]
`;

exports[`platform/gitlab getBranchPr(branchName) should return the PR object 1`] = `
Object {
  "additions": 1,
  "base": Object {
    "sha": "1234",
  },
  "body": undefined,
  "branchName": "some-branch",
  "commits": 1,
  "deletions": 1,
  "displayNumber": "Merge Request #91",
  "iid": 91,
  "isModified": true,
  "isStale": false,
  "number": 91,
  "source_branch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "target_branch": "master",
}
`;

exports[`platform/gitlab getPr(prNo) returns the PR 1`] = `
Object {
  "body": "a merge request",
  "branchName": "some-branch",
  "canMerge": false,
  "description": "a merge request",
  "displayNumber": "Merge Request #12345",
  "diverged_commits_count": 5,
  "id": 1,
  "iid": 12345,
  "isConflicted": true,
  "isModified": false,
  "isStale": true,
  "merge_status": "cannot_be_merged",
  "number": 12345,
  "source_branch": "some-branch",
  "state": "merged",
  "targetBranch": "master",
  "target_branch": "master",
}
`;

exports[`platform/gitlab getPr(prNo) returns the PR with nonexisting branch 1`] = `
Object {
  "body": "a merge request",
  "branchName": "some-branch",
  "canMerge": false,
  "description": "a merge request",
  "displayNumber": "Merge Request #12345",
  "diverged_commits_count": 2,
  "id": 1,
  "iid": 12345,
  "isConflicted": true,
  "isModified": true,
  "isStale": true,
  "merge_status": "cannot_be_merged",
  "number": 12345,
  "source_branch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "target_branch": "master",
}
`;

exports[`platform/gitlab getPr(prNo) returns the mergeable PR 1`] = `
Object {
  "body": "a merge request",
  "branchName": "some-branch",
  "canMerge": true,
  "description": "a merge request",
  "displayNumber": "Merge Request #12345",
  "diverged_commits_count": 5,
  "id": 1,
  "iid": 12345,
  "isModified": true,
  "isStale": true,
  "number": 12345,
  "source_branch": "some-branch",
  "state": "open",
  "targetBranch": "master",
  "target_branch": "master",
}
`;

exports[`platform/gitlab getPrBody(input) returns updated pr body 1`] = `
"https://github.com/foo/bar/issues/5 plus also [a link](https://github.com/foo/bar/issues/5

  Merge Requests are the best, here are some MRs.

  ## Open

These updates have all been created already. Click a checkbox below to force a retry/rebase of any.

 - [ ] <!-- rebase-branch=renovate/major-got-packages -->[build(deps): update got packages (major)](../merge_requests/2433) (\`gh-got\`, \`gl-got\`, \`got\`)
"
`;

exports[`platform/gitlab getPrFiles() returns files 1`] = `
Array [
  "renovate.json",
  "not renovate.json",
]
`;

exports[`platform/gitlab getRepos should return an array of repos 1`] = `
Array [
  Array [
    "projects?membership=true&per_page=100&with_merge_requests_enabled=true",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitlab getRepos should return an array of repos 2`] = `
Array [
  "a/b",
  "c/d",
]
`;

exports[`platform/gitlab initPlatform() should accept custom endpoint 1`] = `
Object {
  "endpoint": "https://gitlab.renovatebot.com/",
  "gitAuthor": "Renovate Bot <a@b.com>",
}
`;

exports[`platform/gitlab initPlatform() should default to gitlab.com 1`] = `
Object {
  "endpoint": "https://gitlab.com/api/v4/",
  "gitAuthor": "Renovate Bot <a@b.com>",
}
`;

exports[`platform/gitlab initRepo should escape all forward slashes in project names 1`] = `
Array [
  Array [
    "projects/some%2Frepo%2Fproject",
  ],
  Array [
    "user",
  ],
]
`;

exports[`platform/gitlab initRepo should fall back if http_url_to_repo is empty 1`] = `
Array [
  Array [
    "projects/some%2Frepo%2Fproject",
  ],
  Array [
    "user",
  ],
]
`;

exports[`platform/gitlab setBaseBranch(branchName) sets the base branch 1`] = `
Array [
  Array [
    "projects/some%2Frepo",
  ],
  Array [
    "user",
  ],
]
`;
